--- a/EllypinCustomer/src/app/customer/customer.component.html
+++ b/EllypinCustomer/src/app/customer/customer.component.html
@@ -161,7 +161,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" (click)="closeModal()">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" (click)="closeModal('buy-pop')">&times;</button>
         <form action="" [formGroup]="buyForm">
           <h3>Buy</h3>
           <div class="row">
@@ -307,9 +307,13 @@
           <div class="row" *ngIf="requestId">
             <div class="col-sm-12">
               <div class="alert alert-success">
-                Request Created Succesfully
-                <br>
-                Request Id:{{requestId}}
+                <p style="text-align:center">Buy Request Created Succesfully</p>
+                <p style="text-align:center">Request Id:{{requestId}}</p>
+                <p style="text-align:center">Please COPY this ID Number and include it in any correspondence with us
+                </p>
+                <div style="text-align:center">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="closeModal('buy-pop')">OK</button>
+                </div>
               </div>
             </div>
           </div>
@@ -323,7 +327,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" (click)="closeModal()">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" (click)="closeModal('redeem-pop')">&times;</button>
         <form action="" [formGroup]="redeemForm">
           <h3>Redeem</h3>
           <div class="row">
@@ -401,12 +405,14 @@
             </div>
           </div>
           <div class="row" *ngIf="requestId">
-            <div class="col-sm-12">
-              <div class="alert alert-success">
-                Request Created Succesfully
-                <br>
-                Request Id:{{requestId}}
-              </div>
+            <div class="alert alert-success">
+                <p style="text-align:center">Redeem Request Created Succesfully</p>
+                <p style="text-align:center">Request Id:{{requestId}}</p>
+                <p style="text-align:center">Please COPY this ID Number and include it in any correspondence with us
+                </p>
+                <div style="text-align:center">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="closeModal('redeem-pop')">OK</button>
+                </div>
             </div>
           </div>
         </form>
@@ -419,7 +425,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" (click)="closeModal()">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" (click)="closeModal('transfer-pop')">&times;</button>
         <form action="" [formGroup]="transferForm">
           <h3>Transfer To</h3>
           <div class="row">
