--- a/EllypinCustomer/src/app/admin/admin.component.html
+++ b/EllypinCustomer/src/app/admin/admin.component.html
@@ -330,6 +330,90 @@
           </div>
         </div> -->
       </div>
+
+      <div class="row redeem-section">
+        <div class="col-sm-2 col-xs-12">
+          <div class="opheading">
+            <h2>SWAP</h2>
+          </div>
+        </div>
+        <div class="col-sm-10 col-xs-12">
+          <h3>Raw Message from MongoDB</h3>
+          <div class="table-responsive">
+            <table class="table table-striped table-bordered text-center">
+              <thead>
+                <tr>
+                    <th>Serial No</th>
+                    <!-- <th>Name & Address</th> -->
+                    <th>Email</th>
+                    <th>Token to Swap</th>
+                    <th>Fees</th>
+                    <th>Public Key</th>
+                    <!-- <th>Bank</th>
+                    <th>Account Number</th> -->
+                </tr>
+              </thead>
+              <tbody>
+                <tr style="cursor: pointer" (click)="swapClicked((itemsPerPage * (swapCurrentPage-1)) + i)" data-toggle="modal" data-target="#swap-kyc" *ngFor="let obj of swapMessageDisplay | paginate: {id: 'swap', itemsPerPage: itemsPerPage, currentPage: swapCurrentPage };let i=index">
+                    <td>{{obj.counter}}</td>
+                    <!-- <td>{{obj.redeemBeneficiary}}</td> -->
+                    <td>{{obj.swapEmail}}</td>
+                    <td>{{obj.swapToken}}</td>
+                    <td>{{obj.swapFee}}</td>
+                    <td>{{obj.publicKey}}</td>
+                    <!-- <td>{{obj.redeemBank}}</td>
+                    <td>{{obj.redeemAccountNumber}}</td> -->
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div style="background-color: #f9f9f9">
+              <pagination-controls id="swap" (pageChange)="swapCurrentPage = $event" responsive="true"></pagination-controls>
+            </div>
+        </div>
+        <!-- <div class="col-sm-6 col-xs-12" *ngIf="redeemObjectSet.redeemBank">
+          <h3>Custodian UI</h3>
+          <div class="table-responsive redeem-wrapper">
+            <table class="table table-striped table-bordered text-center" id="podtable">
+              <thead>
+                <tr>
+                  <th>Serial No</th>
+                  <th>Bank Name</th>
+                  <th>Swift</th>
+                  <th>Bank Account No</th>
+                  <th>Beneficiary</th>
+                  <th>Tokens to Redeem</th>
+                  <th>Amount to pay</th>
+                  <th>KYC</th>
+                  <th>update Account balance</th>
+                  <th>Request Status</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                    <td>1.</td>
+                    <td>{{redeemObjectSet.redeemBank}}</td>
+                    <td>{{redeemObjectSet.redeemSwiftCode}}</td>
+                    <td>{{redeemObjectSet.redeemAccountNumber}}</td>
+                    <td>{{redeemObjectSet.redeemBeneficiary}}</td>
+                    <td>{{redeemObjectSet.redeemToken}}</td>
+                    <td><input type="text" [(ngModel)]="redeemObjectSet.BURN_TOKEN_REQUEST.redeemAmount" [readonly]="redeemObjectSet.KYC != 'Approve' || redeemObjectSet.BURN_TOKEN_REQUEST.custodianSet" class="form-control"></td>
+                    <td>{{redeemObjectSet.KYC}}</td>
+                    <td><input type="text" [(ngModel)]="redeemObjectSet.BURN_TOKEN_REQUEST.assetBalance" [readonly]="redeemObjectSet.KYC != 'Approve' || redeemObjectSet.BURN_TOKEN_REQUEST.custodianSet" class="form-control"></td>
+                    <td>
+                        <span *ngIf="redeemObjectSet.BURN_TOKEN_ACKNOWLEDGE">TOKENS BURNED</span>
+                        <span *ngIf="!redeemObjectSet.BURN_TOKEN_ACKNOWLEDGE">TOKENS NOT BURNED YET</span>
+                    </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="button-wrapper">
+            <button class="btn btn-primary" (click)="updateRedeemObject()" [disabled]="redeemObjectSet.BURN_TOKEN_ACKNOWLEDGE">Update</button>
+          </div>
+        </div> -->
+      </div>
+
     </div>
   </div>
 </div>
@@ -440,9 +524,6 @@
   </div>
 </div>
 
-
-
-
 <div class="modal fade" id="redeem-kyc" role="dialog" data-backdrop="static">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -487,6 +568,88 @@
             <div class="col-sm-12">
               <div class="form-submit">
                 <button type="submit" class="btn btn-success btn-lg" (click)="burnTokens()" >Burn Token</button>
+              </div>
+            </div>
+          </div>
+        </form>
+
+
+        <form action="" class="form-inline" [hidden]="(!redeemObjectSet.BURN_TOKEN_ACKNOWLEDGE)">
+          <h3 class="text-center">Serial Number:  <span>{{redeemObjectSet.serialNo}}</span></h3>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-submit">
+                <p class="text-center">Token has been burned</p>
+              </div>
+            </div>
+          </div>
+        </form>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="swap-kyc" role="dialog" data-backdrop="static">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" (close)="closeModal()">&times;</button>
+        <form action="" class="form-inline" [hidden]="swapObjectSet?.SWAP_TOKEN_REQUEST?.custodianSet">
+          <h3 class="text-center">Serial Number:  <span>{{swapObjectSet.serialNo}}</span></h3>
+          <div *ngIf="error">
+            <div  class="alert alert-danger">
+              {{error}}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-group">
+                <label>KYC &nbsp;&nbsp;</label>
+
+                <span *ngIf="swapObjectSet.KYC == 'Approve'">Approved</span>
+                <span *ngIf="swapObjectSet.KYC != 'Approve'">
+                  <select [(ngModel)]="kycSwapValue" [ngModelOptions]="{standalone: true}" class="form-control">
+                    <option value="" disabled>Set KYC</option>
+                    <option value="Approve">Approve</option>
+                    <option value="Not Approved">Do Not Approve</option>
+                  </select>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-submit" *ngIf="!(redeemObjectSet?.KYC == 'Approve')">
+                <button type="submit" class="btn btn-success btn-lg" (click)="updateSwapObject()" >Update</button>
+              </div>
+            </div>
+          </div>
+        </form>
+
+        
+        <form action="" class="form-inline" [hidden]="!swapObjectSet?.SWAP_TOKEN_REQUEST?.custodianSet || swapObjectSet?.SWAP_TOKEN_ACKNOWLEDGE || swapObjectSet?.SWAP_TOKEN_REQUEST?.secondCustodianSet || (currentProvider == 3)">
+          <h3 class="text-center">Serial Number:  <span>{{swapObjectSet.serialNo}}</span></h3>
+          <p class="text-center">Amount not received by Second Custodian Yet</p>
+        </form>
+        
+        <form action="" class="form-inline" [hidden]="!swapObjectSet?.SWAP_TOKEN_REQUEST?.custodianSet || swapObjectSet?.SWAP_TOKEN_ACKNOWLEDGE || !swapObjectSet?.SWAP_TOKEN_REQUEST?.secondCustodianSet || (currentProvider == 3)">
+          <h3 class="text-center">Serial Number:  <span>{{swapObjectSet.serialNo}}</span></h3>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-submit">
+                <button type="submit" class="btn btn-success btn-lg" (click)="mintSwapToken()" >Mint Token</button>
+              </div>
+            </div>
+          </div>
+        </form>
+
+        <form action="" class="form-inline" [hidden]="swapObjectSet.SWAP_TOKEN_REQUEST?.tokenBurned || !swapObjectSet?.SWAP_TOKEN_REQUEST?.custodianSet || swapObjectSet?.SWAP_TOKEN_ACKNOWLEDGE || (currentProvider == 4)">
+          <h3 class="text-center">Serial Number:  <span>{{swapObjectSet.serialNo}}</span></h3>
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-submit">
+                <button type="submit" class="btn btn-success btn-lg" (click)="burnSwapTokens()" >Burn Token</button>
               </div>
             </div>
           </div>
