--- a/EllypinCustomer/src/app/custodian/custodian.component.html
+++ b/EllypinCustomer/src/app/custodian/custodian.component.html
@@ -582,11 +582,11 @@
           </form>
   
           <form action="" [hidden]="!swapObjectSet?.SWAP_TOKEN_ACKNOWLEDGE">
-            <h3 class="text-center">Serial Number:  <span>{{redeemObjectSet.serialNo}}</span></h3>
+            <h3 class="text-center">Serial Number:  <span>{{swapObjectSet.serialNo}}</span></h3>
             <div class="row">
               <div class="col-sm-12">
                 <div class="form-submit">
-                  <p class="text-center">Tokens has been burned</p>
+                  <p class="text-center">Tokens has been swapped</p>
                 </div>
               </div>
             </div>
