--- a/EllypinCustomer/src/app/custodian2/custodian2.component.html
+++ b/EllypinCustomer/src/app/custodian2/custodian2.component.html
@@ -506,7 +506,7 @@
           <p class="text-center">Tokens not yet received by First Custodian</p>
         </form>
 
-        <form action="" [hidden]="swapObjectSet?.SWAP_TOKEN_ACKNOWLEDGE|| swapObjectSet?.KYC != 'Approve'">
+        <form action="" [hidden]="swapObjectSet?.SWAP_TOKEN_ACKNOWLEDGE || !(swapObjectSet?.SWAP_TOKEN_REQUEST?.custodianSet) || swapObjectSet?.KYC != 'Approve'">
           <h3 class="text-center">Serial Number: <span>{{swapObjectSet.serialNo}}</span></h3>
           <div class="row" *ngIf="swapObjectSet.SWAP_TOKEN_REQUEST">
             <div class="col-sm-12">
@@ -526,12 +526,12 @@
           </div>
         </form>
 
-        <form action="" [hidden]="!redeemObjectSet?.BURN_TOKEN_ACKNOWLEDGE">
-          <h3 class="text-center">Serial Number: <span>{{redeemObjectSet.serialNo}}</span></h3>
+        <form action="" [hidden]="!swapObjectSet?.SWAP_TOKEN_ACKNOWLEDGE">
+          <h3 class="text-center">Serial Number: <span>{{swapObjectSet.serialNo}}</span></h3>
           <div class="row">
             <div class="col-sm-12">
               <div class="form-submit">
-                <p class="text-center">Tokens has been burned</p>
+                <p class="text-center">Tokens has been swapped</p>
               </div>
             </div>
           </div>
