--- a/EllypinCustomer/src/app/admin/admin.component.html
+++ b/EllypinCustomer/src/app/admin/admin.component.html
@@ -266,7 +266,7 @@
 
       <div class="row buy-section">
         <div class="col-sm-2 col-xs-12">
-          <div class="opheading">
+          <div class="opheading" (click)="showBuy()">
             <h2>BUY</h2>
           </div>
         </div>
@@ -348,7 +348,7 @@
 
       <div class="row redeem-section">
         <div class="col-sm-2 col-xs-12">
-          <div class="opheading" (click)="testPod2Mint()">
+          <div class="opheading">
             <h2>SWAP</h2>
           </div>
         </div>
