added-ropsten-feature

--- a/EllypinCustomer/src/app/custodian2/custodian2.component.html
+++ b/EllypinCustomer/src/app/custodian2/custodian2.component.html
@@ -180,7 +180,7 @@
           </div>
         </div>
       </div>
-      <!-- <div class="row buy-section">
+      <div class="row buy-section">
         <div class="col-sm-2 col-xs-12">
           <div class="opheading">
             <h2>BUY</h2>
@@ -262,7 +262,7 @@
               <pagination-controls id="redeem" (pageChange)="redeemCurrentPage = $event" responsive="true"></pagination-controls>
             </div>
         </div>
-      </div> -->
+      </div>
 
       <div class="row buy-section">
         <div class="col-sm-2 col-xs-12">
