--- a/EllypinCustomer/src/app/admin/admin.component.html
+++ b/EllypinCustomer/src/app/admin/admin.component.html
@@ -111,7 +111,7 @@
                   <table class="table table-bordered text-center">
                     <thead>
                       <tr>
-                        <th colspan="3">Fees</th>
+                        <th colspan="3">{{(currentProvider == 3)? 'Pod1' : 'Pod2'}}Fees</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -138,7 +138,7 @@
                 </div>
               </div>
               <div class="col-sm-4 asset-wrapper">
-                <h4>Asset Account Balance</h4>
+                <h4>{{(currentProvider == 3)? 'Pod1' : 'Pod2'}} Asset Account Balance</h4>
                 <div class="asset-inner">
                   <span style="text-align:center">{{totalSupply}}</span>
                 </div>
@@ -148,7 +148,7 @@
                   <table class="table table-bordered text-center">
                     <thead>
                       <tr>
-                        <th colspan="2">Pod Balance</th>
+                        <th colspan="2">{{(currentProvider == 3)? 'Pod1' : 'Pod2'}} Balance</th>
                       </tr>
                     </thead>
                     <tbody>
