--- a/EllypinCustomer/src/app/custodian2/custodian2.component.html
+++ b/EllypinCustomer/src/app/custodian2/custodian2.component.html
@@ -399,12 +399,12 @@
       <div class="modal-body">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <form action="" [hidden]="buyObjectSet?.KYC == 'Approve'">
-          <h3 class="text-center">Serial Number: <span>{{buyObjectSet.serialNo}}</span></h3>
+          <h3 class="text-center">Serial Number: <span>{{buyObjectSet.serialNo}} ({{buyObjectSet.SEND_TOKEN_REQUEST?.requestType}})</span></h3>
           <p class="text-center">KYC is not approved</p>
         </form>
 
         <form action="" [hidden]="buyObjectSet?.SEND_TOKEN_ACKNOWLEDGE|| buyObjectSet?.KYC != 'Approve'">
-          <h3 class="text-center">Serial Number: <span>{{buyObjectSet.serialNo}}</span></h3>
+          <h3 class="text-center">Serial Number: <span>{{buyObjectSet.serialNo}} ({{buyObjectSet.SEND_TOKEN_REQUEST?.requestType}})</span></h3>
           <div class="row" *ngIf="buyObjectSet?.SEND_TOKEN_REQUEST">
             <div class="col-sm-12">
               <div class="form-group">
@@ -431,7 +431,7 @@
         </form>
 
         <form action="" [hidden]="!buyObjectSet?.SEND_TOKEN_ACKNOWLEDGE">
-          <h3 class="text-center">Serial Number: <span>{{buyObjectSet.serialNo}}</span></h3>
+          <h3 class="text-center">Serial Number: <span>{{buyObjectSet.serialNo}} ({{buyObjectSet.SEND_TOKEN_REQUEST?.requestType}})</span></h3>
           <div class="row">
             <div class="col-sm-12">
               <div class="form-submit">
@@ -451,12 +451,12 @@
       <div class="modal-body">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <form action="" [hidden]="redeemObjectSet?.KYC == 'Approve'">
-          <h3 class="text-center">Serial Number: <span>{{redeemObjectSet.serialNo}}</span></h3>
+          <h3 class="text-center">Serial Number: <span>{{redeemObjectSet.serialNo}} ({{redeemObjectSet.BURN_TOKEN_REQUEST?.requestType}})</span></h3>
           <p class="text-center">KYC is not approved</p>
         </form>
 
         <form action="" [hidden]="redeemObjectSet?.BURN_TOKEN_ACKNOWLEDGE|| redeemObjectSet?.KYC != 'Approve'">
-          <h3 class="text-center">Serial Number: <span>{{redeemObjectSet.serialNo}}</span></h3>
+          <h3 class="text-center">Serial Number: <span>{{redeemObjectSet.serialNo}} ({{redeemObjectSet.BURN_TOKEN_REQUEST?.requestType}})</span></h3>
           <div class="row" *ngIf="redeemObjectSet.BURN_TOKEN_REQUEST">
             <div class="col-sm-12">
               <div class="form-group">
@@ -476,7 +476,7 @@
         </form>
 
         <form action="" [hidden]="!redeemObjectSet?.BURN_TOKEN_ACKNOWLEDGE">
-          <h3 class="text-center">Serial Number: <span>{{redeemObjectSet.serialNo}}</span></h3>
+          <h3 class="text-center">Serial Number: <span>{{redeemObjectSet.serialNo}} ({{redeemObjectSet.BURN_TOKEN_REQUEST?.requestType}})</span></h3>
           <div class="row">
             <div class="col-sm-12">
               <div class="form-submit">
