--- a/EllypinCustomer/src/app/admin/admin.component.css
+++ b/EllypinCustomer/src/app/admin/admin.component.css
@@ -35,3 +35,17 @@ tr.noBorder td {
 .toBurn{
     background-color: red
 }
+
+.exportButtons {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0;
+}
+
+.exportButtons button{
+    color:#000;
+    background: #fff;
+    border-radius: 5px;
+    font-weight:500;
+    text-align: center;
+}
