--- a/EllypinCustomer/src/app/admin/admin.component.html
+++ b/EllypinCustomer/src/app/admin/admin.component.html
@@ -105,7 +105,7 @@
               <a href="https://ropsten.etherscan.io/address/0x44128f17132ae9aac62ce8a47c0cf5465e225c97"
                 target="_blank">MyEtherScan</a>
             </div>
-            <div class="clearfix">
+            <div class="row">
               <div class="col-sm-4 fees-wrapper">
                 <div class="table-responsive">
                   <table class="table table-bordered text-center">
@@ -174,6 +174,41 @@
                 <div class="exportButtons">
                   <button type="button" class="btn pointer" (click)="exportRopstenCsv()">Export Ropsten</button>
                   <button type="button" class="btn pointer" (click)="exportRinkebyCsv()">Export Rinkeby</button>
+                </div>
+              </div>
+            </div>
+            <div class="row" *ngIf="currentProvider == 3">
+              <div class="col-sm-4 asset-wrapper">
+                <h4>PodK Asset Balance</h4>
+                <div class="asset-inner">{{asset721}}</div>
+              </div>
+              <div class="col-sm-4 podbal-wrapper">
+                <div class="table-responsive">
+                  <table class="table table-bordered text-center">
+                    <thead>
+                      <tr>
+                        <th colspan="2">PodK Balance</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Total</td>
+                        <td>{{asset721}}</td>
+                      </tr>
+                      <!-- <tr>
+                          <td>Burned</td>
+                          <td>{{totalBurn}}</td>
+                        </tr>
+                        <tr>
+                          <td>Redeemed</td>
+                          <td>{{totalRedeem}}</td>
+                        </tr>
+                        <tr>
+                          <td>Net</td>
+                          <td>{{netToken}}</td>
+                        </tr> -->
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
